Agregando valores vacios para los locales de la entidad Translation.
A editar una traduccion, Se añaden valores null para todos los locales que la misma no contenga.

--- a/Resources/views/Translation/_row.html.twig
+++ b/Resources/views/Translation/_row.html.twig
@@ -50,7 +50,14 @@
     </td>
     <td>
         {% for locale in locales %}
-            <pre class="value-content data-{{ locale }}">{{ translation.values[locale]|default }}</pre>
+            {% set locale_value = translation.values[locale]|default %}
+            <pre class="value-content data-{{ locale }}" title="{{ locale }}">
+                {%- if locale_value is not empty -%}
+                    {{- locale_value -}}
+                {%- else -%}
+                    [value for <span class="label label-primary">{{ locale }}</span> is missing]
+                {%- endif -%}
+            </pre>
         {% endfor %}
         <table class="table table-condensed table-bordered" style="margin-bottom: 0px">
             <tr>
