--- a/Resources/views/base.html.twig
+++ b/Resources/views/base.html.twig
@@ -35,6 +35,7 @@
     <script src="{{ asset('bundles/manueltranslation/js/jquery.min.js') }}"></script>
     <script src="{{ asset('bundles/manueltranslation/js/bootstrap.min.js') }}"></script>
     <script src="{{ asset('bundles/manueltranslation/js/lodash.min.js') }}"></script>
+    <script src="{{ asset('bundles/manueltranslation/js/translations.js') }}"></script>
     <script>
         $(function () {
             $('[data-toggle="tooltip"]').tooltip()
