Traduciendo la vista de traducciones

--- a/Resources/views/Default/index.html.twig
+++ b/Resources/views/Default/index.html.twig
@@ -71,7 +71,8 @@
     <script>
     var TranslationData = {
         baseUrlApi: '{{ path('manuel_translation_api_list') }}',
-        locales: {{ locales|json_encode|raw }}
+        locales: {{ locales|json_encode|raw }},
+        locale: '{{ app.request.locale }}'
     };
     </script>
 
