--- a/Resources/views/Default/index.html.twig
+++ b/Resources/views/Default/index.html.twig
@@ -35,11 +35,7 @@
 {% endblock %}
 
 {% block content %}
-    {% verbatim %}
-        
-        <trans-list></trans-list>
-
-    {% endverbatim %}
+    <div id="root"></div>
 {% endblock %}
 
 {% block javascripts %}
@@ -53,5 +49,5 @@
         domains: {{ domains|json_encode|raw }},
     };
     </script>
-    <script src="{{ asset('bundles/manueltranslation/js/translations.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('bundles/manueltranslation/js/translations.js') }}"></script>
 {% endblock %}
