--- a/Resources/views/Default/dropdown_options.html.twig
+++ b/Resources/views/Default/dropdown_options.html.twig
@@ -5,27 +5,35 @@
     </button>
     <ul class="dropdown-menu dropdown-menu-right" role="menu">
         <li>
+            <a href="{{ path('manuel_translation_load_from_file') }}">
+                <span aria-hidden="true" class="glyphicon glyphicon-random"></span>
+                {{ 'label.load_from_file'|trans }}
+            </a>
+        </li>
+        <li class="divider"></li>
+        <li>
             <a href="{{ path('manuel_translation_generate_file') }}">
                 <span aria-hidden="true" class="glyphicon glyphicon-indent-right"></span>
                 {{ 'label.update_file'|trans }}
             </a>
         </li>
         <li>
-            <a href="{{ path('manuel_translation_load_from_file') }}">
-                <span aria-hidden="true" class="glyphicon glyphicon-random"></span>
-                {{ 'label.load_from_file'|trans }}
+            <a href="{{ path('manuel_translation_download_backup_file') }}">
+                <span aria-hidden="true" class="glyphicon glyphicon-download"></span>
+                {{ 'label.download_generated_file'|trans }}
             </a>
         </li>
         {% if app.environment != 'prod' %}
+            <li class="divider"></li>
             <li>
-                <a href="{{ path('manuel_translation_transfer_files_to_bd') }}">
+                <a href="{{ path('manuel_translation_transfer_files_to_bd') }}" title="Esta opción posiblemente sea removida en un futuro">
                     <span aria-hidden="true" class="glyphicon glyphicon-refresh"></span>
-                    {{ 'label.load_trans_in_bd'|trans }}
+                    <del>{{ 'label.load_trans_in_bd'|trans }}</del>
                 </a>
             </li>
             <li>
                 <a href="{{ path('manuel_translation_inactive_unused') }}">
-                    <span aria-hidden="true" class="glyphicon glyphicon-refresh"></span>
+                    <span aria-hidden="true" class="glyphicon glyphicon-exclamation-sign"></span>
                     {{ 'label.inactive_unused_trans'|trans }}
                 </a>
             </li>
