--- a/Resources/views/base.html.twig
+++ b/Resources/views/base.html.twig
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{% block title %}Welcome!{% endblock %}</title>
+    <title>{% block title %}Translations Administration{% endblock %}</title>
     {% block stylesheets %}
         <link href="{{ asset('bundles/manueltranslation/css/lumen_bootstrap.min.css') }}" rel="stylesheet">
         <style>
