Agregada opción para regenerar cache de traducciones
La idea es poder regenerar la cache tanto en dev como en prod
sin necesidad de borrar toda la cache del proyecto.

--- a/Resources/views/Default/dropdown_options.html.twig
+++ b/Resources/views/Default/dropdown_options.html.twig
@@ -29,6 +29,13 @@
                 {{ 'label.generate_and_download_cache_file'|trans }}
             </a>
         </li>
+        <li class="divider"></li>
+        <li>
+            <a href="{{ path('manuel_translation_clear_cache') }}">
+                <span aria-hidden="true" class="glyphicon glyphicon-random"></span>
+                {{ 'label.clear_translation_cache'|trans }}
+            </a>
+        </li>
         {% if app.environment != 'prod' %}
             <li class="divider"></li>
             <li>
