--- a/Resources/views/Sync/table_conflicts.html.twig
+++ b/Resources/views/Sync/table_conflicts.html.twig
@@ -21,7 +21,7 @@
                     {% include '@ManuelTranslation/Sync/_translation_data.html.twig' with {
                     id: data['database'].id,
                     translation: data['database'],
-                    hash: data['hash'],
+                    hash: data['database_hash'],
                     last_changed: 'local',
                     } only %}
                 </td>
