--- a/templates/flash.html.twig
+++ b/templates/flash.html.twig
@@ -1,8 +1,7 @@
 {% for type, messages in app.flashes %}
     {% for message in messages %}
         <div class="alert alert-{{ type }} alert-dismissible">
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span
-                        aria-hidden="true">&times;</span></button>
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
             {{ message|raw }}
         </div>
     {% endfor %}
