--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -1,34 +1,9 @@
-<div class="navbar navbar-default">
+<nav class="navbar navbar-dark bg-dark mb-5 navbar-expand-md">
     <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse"
-                    data-target=".navbar-responsive-collapse">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="{{ path('manuel_translation_list') }}">Translation Bundle</a>
-        </div>
-        <div class="navbar-collapse collapse navbar-responsive-collapse">
-            {#<form class="navbar-form navbar-left" action="{{ path('manuel_translation_list') }}" method="get">#}
-                {#<input class="form-control col-lg-8" name="search" value="{{ app.request.get('search') }}" placeholder="Search Translation" type="text">#}
-            {#</form>#}
-            {#<ul class="nav navbar-nav">#}
-                {#<li><a href="{{ path('manuel_translation_list') }}">Clear</a></li>#}
-            {#</ul>#}
-            {#<ul class="nav navbar-nav navbar-right">#}
-                {#<li><a href="#">Link</a></li>#}
-                {#<li class="dropdown">#}
-                    {#<a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>#}
-                    {#<ul class="dropdown-menu">#}
-                        {#<li><a href="#">Action</a></li>#}
-                        {#<li><a href="#">Another action</a></li>#}
-                        {#<li><a href="#">Something else here</a></li>#}
-                        {#<li class="divider"></li>#}
-                        {#<li><a href="#">Separated link</a></li>#}
-                    {#</ul>#}
-                {#</li>#}
-            {#</ul>#}
-        </div>
+        <a class="navbar-brand" href="{{ path('manuel_translation_list') }}">Translations Config</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
     </div>
-</div>
+</nav>
