--- a/templates/Default/index.html.twig
+++ b/templates/Default/index.html.twig
@@ -38,6 +38,7 @@
          data-paths="{{- {
              'list': path('manuel_translation_api_list')
          }|json_encode|e('html_attr') -}}"
+         data-domains="{{- domains|json_encode|e('html_attr') -}}"
     ></div>
 {% endblock %}
 
